src/BlazorUI/Bit.BlazorUI/Components/Buttons/BitButton/BitButton.scss
@import "../../../Styles/functions.scss";

.bit-btn {
    cursor: pointer;
    text-decoration: none;
    min-width: spacing(8);
    min-height: spacing(4);
    box-sizing: border-box;
    font-size: spacing(1.75);
    padding: spacing(0.5) spacing(2);
    border-width: $shape-border-width;
    border-style: $shape-border-style;
    border-radius: $shape-border-radius;
    font-family: $typography-font-family;
    font-weight: $typography-font-weight;

    &.bit-dis {
        cursor: default;
        pointer-events: none;
        color: $color-foreground-disabled;
        border-color: var(--bit-btn-clr-brd-dis);
        background-color: var(--bit-btn-clr-bg-dis);
    }

    --bit-btn-clr: #{$color-primary-main};
    --bit-btn-clr-hover1: #{$color-action-hover-primary};
    --bit-btn-clr-hover2: #{$color-action-hover-secondary};
    --bit-btn-clr-active1: #{$color-action-active-primary};
    --bit-btn-clr-active2: #{$color-action-active-secondary};
    
    --bit-btn-clr-brd-dis: #{$color-border-disabled};
    --bit-btn-clr-bg-dis: #{$color-background-disabled};
}

.bit-btn-pri {
    color: $color-primary-text;
    border-color: var(--bit-btn-clr);
    background-color: var(--bit-btn-clr);

    @media (hover: hover) {
        &:hover {
            border-color: var(--bit-btn-clr-hover1);
            background-color: var(--bit-btn-clr-hover1);
        }
    }

    &:active {
        border-color: var(--bit-btn-clr-active1);
        background-color: var(--bit-btn-clr-active1);
    }
}

.bit-btn-std {
    --bit-btn-clr: #{$color-secondary-text};
    --bit-btn-clr-bg-dis: transparent;
    
    color: var(--bit-btn-clr);
    border-color: var(--bit-btn-clr);
    background-color: $color-secondary-main;

    @media (hover: hover) {
        &:hover {
            background-color: var(--bit-btn-clr-hover2);
        }
    }

    &:active {
        background-color: var(--bit-btn-clr-active2);
    }
}

.bit-btn-txt {
    --bit-btn-clr: #{$color-secondary-text};
    --bit-btn-clr-brd-dis: transparent;
    --bit-btn-clr-bg-dis: transparent;
    
    color: var(--bit-btn-clr);
    border-color: transparent;
    background-color: transparent;

    @media (hover: hover) {
        &:hover {
            background-color: var(--bit-btn-clr-hover2);
            border-color: var(--bit-btn-clr-hover2);
        }
    }

    &:active {
        background-color: var(--bit-btn-clr-active2);
        border-color: var(--bit-btn-clr-active2);
    }
}

.bit-btn-inf {
    --bit-btn-clr: #{$color-state-info};
    --bit-btn-clr-hover1: #{$color-action-hover-state-info};
    --bit-btn-clr-hover2: #{$color-action-hover-state-info-bg};
    --bit-btn-clr-active1: #{$color-action-active-state-info};
    --bit-btn-clr-active2: #{$color-action-active-state-info-bg};
}

.bit-btn-suc {
    --bit-btn-clr: #{$color-state-success};
    --bit-btn-clr-hover1: #{$color-action-hover-state-success};
    --bit-btn-clr-hover2: #{$color-action-hover-state-success-bg};
    --bit-btn-clr-active1: #{$color-action-active-state-success};
    --bit-btn-clr-active2: #{$color-action-active-state-success-bg};
}

.bit-btn-wrn {
    --bit-btn-clr: #{$color-state-warning};
    --bit-btn-clr-hover1: #{$color-action-hover-state-warning};
    --bit-btn-clr-hover2: #{$color-action-hover-state-warning-bg};
    --bit-btn-clr-active1: #{$color-action-active-state-warning};
    --bit-btn-clr-active2: #{$color-action-active-state-warning-bg};
}

.bit-btn-swr {
    --bit-btn-clr: #{$color-state-severe-warning};
    --bit-btn-clr-hover1: #{$color-action-hover-state-severe-warning};
    --bit-btn-clr-hover2: #{$color-action-hover-state-severe-warning-bg};
    --bit-btn-clr-active1: #{$color-action-active-state-severe-warning};
    --bit-btn-clr-active2: #{$color-action-active-state-severe-warning-bg};
}

.bit-btn-err {
    --bit-btn-clr: #{$color-state-error};
    --bit-btn-clr-hover1: #{$color-action-hover-state-error};
    --bit-btn-clr-hover2: #{$color-action-hover-state-error-bg};
    --bit-btn-clr-active1: #{$color-action-active-state-error};
    --bit-btn-clr-active2: #{$color-action-active-state-error-bg};
}

.bit-btn-sm {
    min-width: spacing(6);
    min-height: spacing(3);
    font-size: spacing(1.5);
    padding: spacing(0.3) spacing(1.5);
}

.bit-btn-lg {
    min-width: spacing(10);
    min-height: spacing(5);
    font-size: spacing(2);
    padding: spacing(0.7) spacing(2.5);
}

